--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,5 +38,8 @@
     "json",
     "jsonc",
     "yaml"
-  ]
+  ],
+  "slidev.port": 3031,
+  "slidev.preview-sync": true,
+  "slidev.force-enabled": true
 }
