--- a/2024-11-06-ngpoland/src/package.json
+++ b/2024-11-06-ngpoland/src/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "slidev",
-    "build": "slidev build --base /2024/viteconf/ --out ../../dist/2024/ngpoland",
+    "build": "slidev build --base /talks/ngpoland-2024/ --out ../../dist/2024/ngpoland",
     "export": "slidev export --per-slide --output ../2024-11-06-ngpoland-en.pdf"
   }
 }
